Fix footer white-space no wrap going outside of container

--- a/app/globals.css
+++ b/app/globals.css
@@ -114,7 +114,7 @@ body {
   }
 
   .max-container {
-    @apply mx-auto max-w-[1800px];
+    @apply mx-auto;
   }
 
   .padding-container {
